welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:18: error: identifier expected but integer literal found.
  setPos(x:0, y:20)
           ^PictureMono2:20: error: ')' expected but '}' found.
}
^